# rose

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LINUX.md  README.md  rose.sln
examples/cube/: CMakeLists.txt  cube.c
intern/atomic/: CMakeLists.txt  atomic_ops.h
intern/atomic/intern/: atomic_ops_ext.h  atomic_ops_msvc.h  atomic_ops_unix.h  atomic_ops_utils.h
intern/eigen/: CMakeLists.txt  eigen_capi.h
intern/eigen/intern/: eigenvalues.cc  eigenvalues.h  linear_solver.cc  linear_solver.h  matrix.cc  matrix.h  svd.cc  svd.h
intern/ghost/: CMakeLists.txt  glib.h  glib_types.h
intern/ghost/intern/: api.cc  context.hh  display.hh  glib.cc  platform.cc  platform.h  platform.hh  window.cc  window.hh
intern/guardedalloc/: CMakeLists.txt  MEM_guardedalloc.h
intern/guardedalloc/intern/: guarded_impl.c  linklist.c  linklist.h  lockfree_impl.c  mallocn.c  mallocn.h  mallocn_guarded_private.h  mallocn_lockfree_private.h
intern/guardedalloc/test/: guarded.cc  lockfree.cc
intern/memalloc/: CMakeLists.txt  MEM_alloc.h
intern/memalloc/cpp/: mallocn.cpp
intern/memalloc/intern/: leak_detector.cc  linklist.c  linklist.h  mallocn.c  mallocn_guarded_impl.c  mallocn_inline.h  mallocn_intern.h  mallocn_lockfree_impl.c  memory_usage.cc
intern/native/: CMakeLists.txt  GTK_api.h  GTK_backend_type.h  GTK_window_type.h
intern/native/intern/: gtk_api.cc  gtk_render.hh  gtk_window.cc  gtk_window.hh  gtk_window_manager.cc  gtk_window_manager.hh
intern/network/: CMakeLists.txt  NET_address.h  NET_bind.h  NET_socket.h
intern/network/intern/: address.c  bind.c  socket.c
intern/network/test/: address.cc  socket.cc
intern/oswin/: CMakeLists.txt  oswin.h  oswin.hh
intern/oswin/intern/: api.cc  oswin.cc  oswin_linux.cc  oswin_win32.cc
intern/testing/: CMakeLists.txt  test_main.cc
intern/tiny_window/: CMakeLists.txt  tiny_window.h  tiny_window.hh
intern/tiny_window/intern/: api.cc  tiny_window.cc  tiny_window_linux.cc  tiny_window_win32.cc
intern/wcwidth/: CMakeLists.txt  wcwidth.c  wcwidth.h
resources/icons/: CMakeLists.txt  svg_icons.cc.in  svg_icons.h.in
resources/models/: CMakeLists.txt  cat.fbx  chief.fbx  macarena.fbx  sarah.fbx
source/: CMakeLists.txt
source/bmesh/: bmesh.h
source/bmesh/intern/: bmesh_core.h  bmesh_inline.h  bmesh_iterators.cpp  bmesh_iterators.h  bmesh_mesh.cpp  bmesh_polygon.cpp  bmesh_private.h  bmesh_query.cpp  bmesh_query_inline.h  bmesh_structure.cpp  bmesh_structure_inline.h
source/creator/: CMakeLists.txt  creator.c
source/dna/: dna_customdata_types.h  dna_mesh_types.h  dna_meshdata_types.h  dna_object_types.h
source/ghost/: ghost_api.h  ghost_icontext.h  ghost_ievent.h  ghost_ievtconsumer.h  ghost_isystem.h  ghost_iwindow.h  ghost_types.h
source/ghost/intern/: ghost_api.cpp  ghost_callbackconsumer.cpp  ghost_callbackconsumer.h  ghost_context.h  ghost_contextwgl.cpp  ghost_contextwgl.h  ghost_event.h  ghost_eventmanager.cpp  ghost_eventmanager.h  ghost_isystem.cpp  ghost_system.h  ghost_systemwin32.cpp  ghost_timermanager.cpp  ghost_timermanager.h  ghost_timertask.h  ghost_window.h  ghost_windowmanager.h  ghost_windowwin32.cpp  ghost_windowwin32.h
source/gpu/: gpu_common.h  gpu_context.h  gpu_framebuffer.h  gpu_info.h  gpu_init_exit.h  gpu_primitive.h  gpu_state.h  gpu_storage_buffer.h  gpu_texture.h
source/gpu/infos/: gpu_shader_default_diffuse.hh
source/gpu/intern/: gpu_backend.h  gpu_batch.cc  gpu_context.cc  gpu_context_private.h  gpu_immediate_private.h  gpu_info_private.h  gpu_shader.cc  gpu_shader_create_info_private.h  gpu_shader_dependency.cc  gpu_shader_dependency_private.h  gpu_shader_interface.h  gpu_shader_private.h  gpu_state_private.h  gpu_storage_buffer.cc  gpu_uniform_buffer.cc  gpu_vertex_buffer.cc  gpu_vertex_buffer_private.h  gpu_vertex_format.cc
source/gpu/opengl/: gl_backend.cpp  gl_batch.h  gl_compute.h  gl_context.cpp  gl_context.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_immediate.h  gl_index_buffer.cpp  gl_index_buffer.h  gl_shader.cpp  gl_shader.h  gl_shader_interface.h  gl_storage_buffer.cpp  gl_storage_buffer.h  gl_vertex_array.cpp
source/kernel/: rke_anonymous_attribute.h  rke_context.h  rke_error.h
source/kernel/intern/: anonymous_attribute.cpp  context.cpp  context_private.h  customdata.cpp  id.cpp  id.h  id_private.h
source/lib/: lib_alloc.h  lib_allocator.h  lib_bitmap.h  lib_compiler.h  lib_error.h  lib_hash.h  lib_math.h  lib_math_base.h  lib_math_base_safe.h  lib_math_matrix.h  lib_math_vec.h  lib_mem_utils.h  lib_mempool.h  lib_span.h  lib_string.h  lib_string_ref.h  lib_string_util.h  lib_typed_buffer.h  lib_typedef.h  lib_types.h  lib_utildefines.h  lib_vector.h
source/lib/intern/: lib_error.cpp  lib_math_color_blend_inline.cc  lib_math_vector.cpp  lib_string.cpp  lib_string_util.cpp
source/mesh/: bmesh_class.h
source/mesh/intern/: bmesh_core.cpp  bmesh_core.h  bmesh_iterators_inline.h  bmesh_mesh.h  bmesh_polygon.h  bmesh_query.h
source/rose/: CMakeLists.txt
source/rose/.tmp/: CMakeLists.txt  Disclaimer.txt  ast.h  lexer.h  node.h  object.h  source.h  token.h  type.h
source/rose/datatoc/: CMakeLists.txt  datatoc.c  datatoc.cc
source/rose/depsgraph/: CMakeLists.txt  DEG_depsgraph.h  DEG_depsgraph_build.h  DEG_depsgraph_query.h
source/rose/draw/: CMakeLists.txt  DRW_cache.h  DRW_engine.h  DRW_render.h
source/rose/editors/: CMakeLists.txt
source/rose/functions/: CMakeLists.txt  FN_field.hh  FN_lazy_function.hh  FN_lazy_function_execute.hh  FN_lazy_function_graph.hh  FN_lazy_function_graph_executor.hh  FN_multi_function.hh  FN_multi_function_builder.hh  FN_multi_function_context.hh  FN_multi_function_data_type.hh  FN_multi_function_param_type.hh  FN_multi_function_params.hh  FN_multi_function_procedure.hh  FN_multi_function_procedure_builder.hh  FN_multi_function_procedure_executor.hh  FN_multi_function_procedure_optimization.hh  FN_multi_function_signature.hh
source/rose/gpu/: CMakeLists.txt  GPU_batch.h  GPU_batch_presets.h  GPU_common.h  GPU_info.h  (+22 more)
source/utf/: utfconv.h
tests/common/: CMakeLists.txt  testing.h  testing_main.cc
(+1223 files in other folders)
