# -----------------------------------------------------------------------------
# Add Sub-Directories

add_subdirectory(datatoc)
add_subdirectory(editors)
add_subdirectory(gpu)
add_subdirectory(makesdna)
add_subdirectory(roselib)
add_subdirectory(roseloader)
add_subdirectory(rosemesh)
add_subdirectory(rosekernel)
add_subdirectory(rosefont)
add_subdirectory(windowmanager)
